# backend/docs/swagger.yaml
@@ -252,7 +252,7 @@ paths:
       summary: Create new team
       tags:
       - team
-  /team/getByUserId:
+  /team/get:
     get:
       description: Get team
       operationId: getTeamById
@@ -269,7 +269,28 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/Team'
-      summary: Get team id
+      tags:
+      - team
+  /team/getByUserId:
+    get:
+      description: Get all teams that a user is a member of
+      operationId: getTeamsByUserId
+      parameters:
+      - description: User ID
+        in: query
+        name: userId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/Team'
+            type: array
+      summary: Get teams by user id
       tags:
       - team
   /user/authenticate:
